--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,21 @@ body {
     border-radius: 5px;
     height: 90vh;
 }
+.section.text-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 80vh;
+}
+
+.rounded-img {
+    border-radius: 50%;
+}
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
